# OpenGL_PhysicsEngine

./: CMakeLists.txt  main.cpp
Meshes/: Mesh.cpp  Mesh.h
Meshes/Cube/: CubeMesh.cpp  CubeMesh.h
Meshes/Platform/: Platform.cpp  Platform.h
lib/imgui/: CMakeLists.txt
shaders/: fragment_shader.frag  vertex_shader.vert
